fixed track not playing after one click on mobile

--- a/src/components/Tracks/Tracks.module.scss
+++ b/src/components/Tracks/Tracks.module.scss
@@ -85,8 +85,10 @@
     }
   }
 
-  &.active {
-    background-color: rgba(255, 255, 255, 0.1);
+  @media (hover: hover) {
+    &.active {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
   }
 
   &.disabled {
